@@ -1,3 +1,7 @@
+2001-11-14  Michael Meeks  <michael@ximian.com>
+
+	* gnome-macros.h: update for new bonobo.
+
 2001-11-12  Darin Adler  <darin@bentspoon.com>
 
 	* gnome-macros.h: Remove the "_HANDLER" from the macro name.
